# caprun

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.planning/: INGEST-CONFLICTS.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.5-MILESTONE-AUDIT.md  v1.6-MILESTONE-AUDIT.md
.planning/debug/: knowledge-base.md
.planning/debug/resolved/: git-commit-linux-fail.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
.planning/intel/classifications/: PLAN-9f2c4e7a.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.2-REQUIREMENTS.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.5-REQUIREMENTS.md  v1.6-REQUIREMENTS.md  v1.7-REQUIREMENTS.md  v1.8-MILESTONE-AUDIT.md  v1.8-REQUIREMENTS.md  v1.9-REQUIREMENTS.md  v1.9-ROADMAP.md
.planning/phases/01-substrate-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-security-design-gate/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-confinement-mediation-substrate/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-PATTERNS.md  03-RESEARCH.md  03-UAT.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-value-injection-security-demo-v0-done/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-PATTERNS.md  04-RESEARCH.md  (+2 more)
.planning/tmp/: docs-work-manifest.json  v1.4-REVIEW-RECONCILIATION.md  v1.4-SCOPE-DRAFT.md  v1.4-SCOPE.md  verify-ARCHITECTURE.md.json  verify-CLAUDE.md.json  verify-CONFIGURATION.md.json  verify-DEVELOPMENT.md.json  verify-GETTING-STARTED.md.json  verify-README.md.json  verify-TESTING.md.json
archive/: AGENT-RUNTIME-HANDOVER.md  README.md  agent-execution-runtime-handover.md
archive/multi-part/: appendix.md  approval-system.md  core-arch.md  implementation-plan.md  intent-runtime.md  kernel-integration.md  roadmap.md  security-model.md
cli/caprun/: Cargo.toml
cli/caprun-exec-launcher/: Cargo.toml
cli/caprun-planner/: Cargo.toml
cli/caprun-planner/src/: lib.rs  main.rs  openai.rs
cli/caprun/src/: key.rs  main.rs  planner.rs  worker.rs
cli/caprun/tests/: audit_viewer.rs  confirm.rs  e2e.rs  grant.rs  harden04_featureless_create_session.rs  live_acceptance_tainted_session.rs  live_acceptance_v1_3.rs  live_acceptance_v1_4_composed.rs  live_acceptance_v1_7_composed.rs  live_acceptance_v1_8_composed.rs  live_acceptance_v1_9_composed.rs  llm_planner_live_accept.rs  origin_seed_provenance.rs  planner.rs  s45_cli_viewer_acceptance.rs  s9_file_write_block.rs  s9_live_block.rs  s9_process_exec_block.rs
crates/adapter-fs/: Cargo.toml
crates/adapter-fs/src/: containment.rs  lib.rs  protocol.rs  workspace.rs
crates/adapter-fs/tests/: fd_pass.rs
crates/brokerd/: Cargo.toml
crates/brokerd/src/: approval.rs  audit.rs  confirmation.rs  display.rs  lib.rs  policy.rs  proto.rs  provenance_proof.rs  quarantine.rs  server.rs  session.rs  sinks.rs
crates/brokerd/src/sinks/: email_send.rs  email_smtp.rs  file_create.rs  file_write.rs  git_commit.rs  git_push.rs  github_pr.rs  http_request.rs  http_write.rs  process_exec.rs
crates/brokerd/tests/: audit_dag.rs  durable_anchor.rs  email_smtp_acceptance.rs  extract_provenance_threading.rs  git_commit_spawn.rs  harden01_session_integrity.rs  phase5_dispatch.rs  planner_capability_split.rs  planner_reduced_signal.rs  process_exec_spawn.rs  proto_claims.rs  replay_cas.rs  s37_http_request.rs  s38_github_pr.rs  s43_http_write_differential.rs  s44_git_push_differential.rs  s45_sdk_run_surface.rs  s46_negative_legs_composed.rs  s9_acceptance.rs  two_connection_intent_bypass.rs  uds_abstract_spike.rs  uds_ipc.rs
crates/brokerd/tests/fixtures/: README-mock-egress-ca.md  hostile_doc.txt  mock-egress-ca.der
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs  policy_gate.rs  sink_schema.rs  sink_sensitivity.rs  value_store.rs
crates/executor/tests/: executor_decision.rs  policy_gate.rs
crates/llm-planner/: Cargo.toml
crates/runtime-core/: Cargo.toml
crates/runtime-core/src/: artifact.rs  effect.rs  event.rs  executor_decision.rs  intent.rs  lib.rs  plan_node.rs  policy.rs  session.rs  value_record.rs
crates/runtime-core/tests/: intent_taint.rs  task2_types.rs  types_compile.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: landlock.rs  lib.rs  rlimits.rs  seccomp.rs
crates/sandbox/tests/: api_spike.rs  confinement_integration.rs  exec_child_confinement.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md
planning-docs/: CANDIDATE-v1.7plus-productization-sketch.md  DECISION-git-push-deferral-v1.8.md  DESIGN-GATE-RECORD-v1.2.md  DESIGN-GATE-RECORD-v1.3.md  DESIGN-GATE-RECORD-v1.4.md  DESIGN-GATE-RECORD-v1.5.md  DESIGN-GATE-RECORD-v1.6.md  DESIGN-GATE-RECORD-v1.7.md  DESIGN-GATE-RECORD-v1.8.md  DESIGN-GATE-RECORD-v1.9.md  DESIGN-GATE-RECORD.md  DESIGN-REVIEW-v1.2-round1.md  DESIGN-confirm-binding.md  DESIGN-confirmation-release.md  DESIGN-content-adapter-mediation.md  DESIGN-durable-anchor-and-label-partition.md  DESIGN-effect-breadth-exec.md  DESIGN-git-github-http-sinks.md  DESIGN-plan-executor.md  DESIGN-security-hardening.md  DESIGN-session-trust-coherence.md  DESIGN-session-trust-state.md  DESIGN-slot-type-binding.md  DESIGN-taint-model.md  DESIGN-v1.9-egress-policy.md  MILESTONE-v1.2-SEED.md  PHASE-7-HANDOFF.md  PLAN.md  PROGRESS-REVIEW-2026-06-30.md  TASK-mint-nonempty-invariant.md
scripts/: check-email-smtp-construction.sh  check-invariants.sh  check-smtp-secrets-absent.sh  compose-verify.sh  docker-cache.sh  mailpit-verify.sh  verify-harden04-featureless.sh
scripts/hooks/: pre-commit
scripts/mock-github/: README.md  server.py
(+415 files in other folders)
