[workspace]
members  = ["crates/*", "cli/caprun"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde      = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid       = { version = "1.23.4",  features = ["v4", "serde"] }
thiserror  = "2.0.18"
chrono     = { version = "0.4.45",  features = ["serde"] }
anyhow     = "1.0.103"
nix        = { version = "0.31.3",  features = ["fs", "socket", "resource", "process", "signal"] }
tokio      = { version = "1.52.3",  features = ["net", "io-util", "rt-multi-thread", "macros"] }
rusqlite   = { version = "0.40.1",  features = ["bundled"] }
landlock   = "0.4.5"
seccompiler = "0.5.0"
sha2       = { version = "0.10",    features = ["std"] }
hex        = "0.4"
tokio-util = { version = "0.7.18",  features = ["codec"] }
