[package]
name             = "caprun-planner"
version.workspace  = true
edition.workspace  = true
license.workspace  = true

[dependencies]
llm-planner  = { path = "../../crates/llm-planner" }
runtime-core = { path = "../../crates/runtime-core" }
tokio        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
# The ONLY reqwest in the workspace (PLANNER-04) — supply-chain-gated
# (checkpoint pre-cleared by the orchestrator with crates.io evidence:
# 573,024,238 total downloads, not yanked, maintained by seanmonstar/hyper).
# default-features = false + rustls-tls-only feature set: NO native-tls /
# openssl-sys transitive dependency. `rustls` (not `rustls-tls`) is the
# correct feature name as of reqwest 0.13.4 — the 0.11/0.12-era name
# `rustls-tls` was renamed; verified via `cargo add --dry-run` before use
# (deviation, see SUMMARY).
reqwest      = { version = "=0.13.4", default-features = false, features = ["rustls", "json"] }
