[package]
name             = "caprun"
version.workspace  = true
edition.workspace  = true
license.workspace  = true

[dependencies]
sandbox      = { path = "../../crates/sandbox" }
brokerd      = { path = "../../crates/brokerd" }
adapter-fs   = { path = "../../crates/adapter-fs" }
runtime-core = { path = "../../crates/runtime-core" }
# `time` feature: bounded retry-with-backoff on the worker's broker connect.
tokio        = { workspace = true, features = ["time"] }
anyhow       = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
rusqlite     = { workspace = true }

[dev-dependencies]
rusqlite     = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
# Needed by tests/live_acceptance_v1_3.rs (17-03) for its in-process
# anti-staple Control B re-anchor mint (ValueStore + mint_from_read) — the
# same path-based workspace crate brokerd already depends on directly, not a
# new external registry dependency.
executor     = { path = "../../crates/executor" }

[[bin]]
name = "caprun"
path = "src/main.rs"

[[bin]]
name = "caprun-worker"
path = "src/worker.rs"

[[test]]
name = "e2e"
path = "tests/e2e.rs"

[[test]]
name = "planner"
path = "tests/planner.rs"

[[test]]
name = "confirm"
path = "tests/confirm.rs"
