[package]
name             = "caprun"
version.workspace  = true
edition.workspace  = true
license.workspace  = true

[dependencies]
sandbox      = { path = "../../crates/sandbox" }
brokerd      = { path = "../../crates/brokerd" }
adapter-fs   = { path = "../../crates/adapter-fs" }
runtime-core = { path = "../../crates/runtime-core" }
# Pure literal-free wire contract shared with the caprun-planner sidecar
# (Phase 21 Plan 03) — no reqwest/tokio in llm-planner itself.
llm-planner  = { path = "../../crates/llm-planner" }
# `time` feature: bounded retry-with-backoff on the worker's broker connect.
tokio        = { workspace = true, features = ["time"] }
anyhow       = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
rusqlite     = { workspace = true }
# Cross-process MAC-key custody (HARDEN-02, cli/caprun/src/key.rs) — vetted
# CSPRNG-backed key generation, never a custom PRNG.
getrandom    = { workspace = true }

[dev-dependencies]
rusqlite     = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
# Needed by tests/live_acceptance_v1_3.rs (17-03) for its in-process
# anti-staple Control B re-anchor mint (ValueStore + mint_from_read) — the
# same path-based workspace crate brokerd already depends on directly, not a
# new external registry dependency.
executor     = { path = "../../crates/executor" }
# v1.9 Phase 46 (LIVE-05): the composed live proof
# (tests/live_acceptance_v1_9_composed.rs) drives the ACTUAL production dispatch
# arm `brokerd::server::evaluate_plan_node_and_record_for_test`, gated behind
# brokerd's non-default `test-fixtures` feature (server.rs:1677). This dev-only
# self-feature enable — Cargo unifies it with the normal `brokerd` dependency —
# makes that verbatim delegate visible to the test binaries WITHOUT touching the
# production `cargo build` (dev-dependencies are excluded from non-test builds),
# so check-invariants Gate 4 (test-fixtures never a DEFAULT feature) and the
# compose-verify feature-OFF release guard remain satisfied. Mirrors brokerd's
# own self dev-dependency pattern (crates/brokerd/Cargo.toml).
brokerd      = { path = "../../crates/brokerd", features = ["test-fixtures"] }

[[bin]]
name = "caprun"
path = "src/main.rs"

[[bin]]
name = "caprun-worker"
path = "src/worker.rs"

[[test]]
name = "e2e"
path = "tests/e2e.rs"

[[test]]
name = "planner"
path = "tests/planner.rs"

[[test]]
name = "confirm"
path = "tests/confirm.rs"
