[package]
name    = "adapter-fs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow       = { workspace = true }
nix          = { workspace = true }
runtime-core = { path = "../runtime-core" }
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
