[package]
name    = "brokerd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
runtime-core = { path = "../runtime-core" }
executor     = { path = "../executor" }
adapter-fs   = { path = "../adapter-fs" }
uuid         = { workspace = true }
anyhow       = { workspace = true }
# `time` feature (Phase 20, PLANNER-02/04): `classify_second_connection`'s
# `tokio::time::timeout` bounds a subsequent connection's first-frame read
# (T-20-08 DoS mitigate). Declared here explicitly rather than relying on
# incidental workspace-wide feature unification with cli/caprun's own
# `features = ["time"]` — `cargo build --workspace` unifies features across
# every member and would mask this crate's real requirement, but a scoped
# `cargo test -p brokerd` (the exact command this plan's own verification
# steps use) does not, and would fail to compile without this.
#
# `process` feature (Phase 32, EXEC-01/04): `sinks::process_exec` spawns the
# `caprun-exec-launcher` via `tokio::process::Command` — a cancellable,
# killable async child (unlike `std::process::Child::wait_with_output()`,
# which consumes `self` and cannot be killed on timeout, Pitfall 5). `io-util`
# is needed for `AsyncReadExt::read_to_end` on the piped stdout/stderr
# handles. Declared explicitly here for the SAME scoped-build reason as
# `time` above — confirm with `cargo build -p brokerd`, not `--workspace`.
tokio        = { workspace = true, features = ["time", "process", "io-util"] }
rusqlite     = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
hmac         = { workspace = true }
getrandom    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
# Default features only — do NOT add `features = [...]` enabling the
# `boring-tls` backend (RUSTSEC-2026-0141: silently disables TLS hostname
# verification). Mailpit needs no TLS at all; builder_dangerous bypasses it.
lettre       = "0.11.22"
# Phase 37 (HTTP-01/03): broker-side, read-only `http.request` GET egress
# (Pattern A, DESIGN §3.1). BROKER-ONLY — reqwest/rustls/ring/webpki-roots are
# NEVER a dependency of the confined worker (which stays fully net-denied); the
# egress leg lives in the broker exactly like `email_smtp.rs`'s SMTP call.
#
# Supply-chain evidence (crates.io, verified 2026-07-18): reqwest is already
# vetted in-workspace at cli/caprun-planner (PLANNER-04) — seanmonstar/hyper,
# not yanked, ~573M downloads; pinned `=0.13.4` identical to the planner. ring
# (0.17, briansmith) and webpki-roots (1.0.8, rustls project) are the canonical
# rustls-ecosystem crates the Phase-35 DESIGN gate selected at §5.1/§5.2. NO
# native-tls / boring-tls / openssl feature is enabled (RUSTSEC hazard class,
# same class as the lettre warning above); asserted with
# `cargo tree -p brokerd -i openssl-sys` (not-found) — see 37-02-SUMMARY.md.
#
# Feature choice (DESIGN §5.1 "lean ring first"): reqwest 0.13.4's `rustls`
# feature transitively enables `__rustls-aws-lc-rs` (the aws-lc-rs C-crypto
# provider) — verified via `cargo add --dry-run`. To honor §5.1 "minimize
# untrusted C in the TCB" we instead select `rustls-no-provider` (reqwest
# bundles NO crypto provider and NO default root store) and supply BOTH
# explicitly in Task 2's ClientBuilder: the pure-Rust `ring` provider (via the
# `rustls` crate's `ring` feature) and the compiled-in `webpki-roots` trust
# anchors (DESIGN §5.2 — hermetic under `env_clear()`, no SSL_CERT_* / system
# store / rustls-platform-verifier). GET-only, broker-side egress scope.
reqwest      = { version = "=0.13.4", default-features = false, features = ["rustls-no-provider"] }
# Pure-Rust `ring` crypto provider for the reqwest client's preconfigured
# rustls ClientConfig (DESIGN §5.1 FORK 2). `default-features = false` drops
# rustls's default `aws-lc-rs` provider so only `ring` C-free crypto is wired.
rustls       = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
# Compiled-in CA trust anchors (DESIGN §5.2, ENV-01) so TLS validation needs no
# SSL_CERT_* env var or readable system cert store — `env_clear()`-hermetic.
webpki-roots = "1.0.8"

[features]
# Gates the CreateSession-IPC forced-Active mint arm (HARDEN-04) so it is
# visible to integration tests in `tests/` (which link this crate as a
# normal, non-`--cfg test` dependency — plain `#[cfg(test)]` items are
# invisible to them). Enabled only via the self dev-dependency below; NEVER a
# default feature, so the mint arm is absent from any production build.
test-fixtures = []

[dev-dependencies]
# Self dev-dependency with `test-fixtures` enabled: Cargo unifies this with
# the `brokerd` lib target when building this package's own test targets
# (unit + integration), making the `#[cfg(any(test, feature =
# "test-fixtures"))]` CreateSession mint arm visible to `tests/uds_ipc.rs`
# without ever appearing in a production build.
brokerd      = { path = ".", features = ["test-fixtures"] }
runtime-core = { path = "../runtime-core" }
executor     = { path = "../executor" }
rusqlite     = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
tokio        = { workspace = true }
serde_json   = { workspace = true }
