[package]
name    = "executor"
version.workspace = true
edition.workspace = true
license.workspace = true

# I2 enforcement — deterministic, non-LLM plan executor.
# Deps: runtime-core (ValueId, ValueRecord, PlanNode, ExecutorDecision) + workspace
# standard utilities only. No new registry crate. (T-04-SC: low, accepted.)

[dependencies]
runtime-core = { path = "../runtime-core" }
uuid         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
# Pure, deterministic digest of the blocked literal for the redactable durable
# anchor (literal_sha256). No I/O — keeps the executor a pure function.
sha2         = { workspace = true }
hex          = { workspace = true }

[dev-dependencies]
runtime-core = { path = "../runtime-core" }
uuid         = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
