[package]
name             = "runtime-core"
version.workspace  = true
edition.workspace  = true
license.workspace  = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
thiserror  = { workspace = true }
chrono     = { workspace = true }
