[package]
name    = "sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock    = { workspace = true }
seccompiler = { workspace = true }
nix         = { workspace = true }
libc        = "0.2"

[[bin]]
name = "confine-probe"
path = "src/bin/confine-probe.rs"
